istioctl/pkg/auth/testdata/rbac-policies-multiple-namespaces-v2.golden.yaml
apiVersion: rbac.istio.io/v1alpha1
kind: ServiceRole
metadata:
  name: service-viewer
  namespace: foo
spec:
  rules:
  - methods:
    - GET
---
apiVersion: rbac.istio.io/v1alpha1
kind: ServiceRole
metadata:
  name: service-viewer
  namespace: bar
spec:
  rules:
  - methods:
    - POST
---
apiVersion: rbac.istio.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: bind-service-viewer
  namespace: foo
spec:
  allow:
  - role: service-viewer
    subjects:
    - names:
      - foo
  workloadSelector:
    labels:
      app: productpage
---
apiVersion: rbac.istio.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: bind-service-viewer
  namespace: bar
spec:
  allow:
  - role: service-viewer
    subjects:
    - names:
      - bar
  workloadSelector:
    labels:
      app: ratings
---
