istioctl/pkg/auth/testdata/rbac-policies-multiple-services.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRole
metadata:
  name: service-viewer
  namespace: default
spec:
  rules:
  - services: ["productpage.svc.cluster.local", "ratings.svc.cluster.local"]
