istioctl/pkg/auth/testdata/rbac-policies-services-only-v2.golden.yaml
apiVersion: rbac.istio.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: bind-service-viewer
  namespace: default
spec:
  allow:
  - role: service-viewer
    subjects:
    - properties:
        source.namespace: istio-system
    - groups:
      - bar
      names:
      - foo
  workloadSelector:
    labels:
      app: productpage
---
apiVersion: rbac.istio.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: bind-all-services
  namespace: default
spec:
  allow:
  - role: all-services
    subjects:
    - names:
      - foo
---
apiVersion: rbac.istio.io/v1alpha1
kind: ServiceRole
metadata:
  name: service-viewer
  namespace: default
spec:
  rules:
  - constraints:
    - key: destination.labels[version]
      values:
      - v3
---
apiVersion: rbac.istio.io/v1alpha1
kind: ServiceRole
metadata:
  name: all-services
  namespace: default
spec:
  rules:
  - methods:
    - '*'
---
