istioctl/pkg/auth/testdata/rbac-policies-with-methods-and-paths.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRole
metadata:
  name: service-viewer
  namespace: default
spec:
  rules:
  - services: ["ratings.svc.cluster.local"]
    methods: ["GET"]
    paths: ["/prod/*"]
