istioctl/pkg/auth/testdata/unused-role.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRole
metadata:
  name: unused-role
  namespace: default
spec:
  rules:
    - services: ["productpage.svc.cluster.local"]
